--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
     <!-- Identity details -->
     <section class="profileHeader">
         <h1 style="line-height: 30px;font-size: 28px;margin-bottom: auto;">Kangyao Huang&emsp;&emsp;<img src="profile/name.png" width="80" style="margin-bottom: -5px;"></h1>
-        <h3>PhD Candidate | AI Researcher | Aircraft & Robotics Engineer</h3>
+        <h3>PhD Candidate | AI Researcher | Aerospace & Robotics Engineer</h3>
         <hr>
-        <p>My name is Kangyao Huang (黄康尧 in Chinese). I am an AI researcher and robot engineer from China. Currently, I am pursuing a PhD degree in Computer Science at Tsinghua University(THU) under the supervision of Prof. Huaping Liu.
+        <p style="font-size: 14px;margin-bottom: auto;">My name is Kangyao Huang (黄康尧 in Chinese). I am an AI researcher and aerospace engineer from China. Currently, I am pursuing a PhD degree in Computer Science at Tsinghua University(THU) under the supervision of Prof. Huaping Liu.
             I also hold an MRes degree in Control from ACSE, the University of Sheffield(UoS), UK., supervised by Prof. John Oyekan, and a BEng degree in Aerospace from Northwestern Polytechnical
             University(NWPU), China. I had several years start-up experience in aerospace and automation industrial sectors, serving as a UAV designer 
             and technical director.
             <br>
-            <br>My current research interest is in robot learning for virtual and real world practice. I also follow ideas on aerial robotics, 
-            swarm robotics, and evolutionary computation. My technological vision is to empower tranditional manufacturing with artificial intelligence technology.
-            I would like to work with any excellent partners, if you have any ideas, please do not hesitate to email me directly.<br></p>
+            <br>My current research interest is in Embodied AI for virtual and real world practice. I also follow ideas on aerial robotics, 
+            CV, swarm and evolutionary computation. My technological vision is to empower tranditional sectors with artificial intelligence technology.
+            I am working to build a startup team for embodied AI, if you have any ideas, please do not hesitate to email me directly.<br></p>
     </section>
     <aside class="socialNetworkNavBar">
         <div class="socialNetworkNav"> 
-            <a href="mailto:huangky22@mails.tsinghua.edu.cn">
+            <a href="mailto:kangyao.huang@outlook.com">
                 <img src="profile/mail.png"  alt="sample" width="30" ></a>
         </div>
         <div class="socialNetworkNav">
@@ -151,7 +151,7 @@
                     </a>
                 </h3>
                 <h3 class="sectionContentSubTitle">
-                    <em>Conference on Robot Learning (CoRL) 2024</em>
+                    <em>Conference on Robot Learning (<b>CoRL</b>) 2024</em>
                 </h3>
             </section>
             <aside class="externalResourcesNav" style="margin-top:0%">
@@ -215,7 +215,7 @@
                 </h3>
                 <h3 class="sectionContentSubTitle">
                     <em>International Joint Conference
-                        on Artificial  Intelligence (IJCAI) 2024 </em>
+                        on Artificial  Intelligence (<b>IJCAI</b>) 2024 </em>
                 </h3>
             </section>
             <aside class="externalResourcesNav" style="margin-top:0%"> 
@@ -279,7 +279,7 @@
                 </h3>
                 <h3 class="sectionContentSubTitle">
                     <em>IEEE International Conference on
-                        Robotics and Automation (ICRA) 2024 </em>
+                        Robotics and Automation (<b>ICRA</b>) 2024 </em>
                 </h3>
             </section>
             <aside class="externalResourcesNav" style="margin-top:0%"> 
@@ -289,7 +289,7 @@
                 <div class="dropdown"> <span>Abstract</span>
                     <div class="dropdown-content">
                         <p style="text-align:left;">
-                            It is common for us to feel pressure in a competi- tion environment, 
+                            It is common for us to feel pressure in a competition environment, 
                             which arises from the desire to obtain success comparing with other individuals or opponents. 
                             Although we might get anxious under the pressure, it could also be a drive for us to stimulate our 
                             potentials to the best in order to keep up with others. Inspired by this, we propose a competitive 
@@ -345,7 +345,7 @@
                     <a href="https://www.tsinghua.edu.cn/info/1166/93890.htm" target="_blank">Jun Li</a>
                 </h3>
                 <h3 class="sectionContentSubTitle">
-                    <em>IEEE/ASME International Conference on Advanced Intelligent Mechatronics(AIM) 2023 </em>
+                    <em>IEEE/ASME International Conference on Advanced Intelligent Mechatronics(<b>AIM</b>) 2023 </em>
                 </h3>
             </section>
             <aside class="externalResourcesNav" style="margin-top:0%"> 
@@ -472,7 +472,7 @@
                     <a href="https://www.tsinghua.edu.cn/info/1166/93890.htm" target="_blank">Jun Li</a>,
                 </h3>
                 <h3 class="sectionContentSubTitle">
-                    <em> International Conference on Unmanned Aircraft Systems (ICUAS) 2023 </em>
+                    <em> International Conference on Unmanned Aircraft Systems (<b>ICUAS</b>) 2023 </em>
                 </h3>
             </section>
             <aside class="externalResourcesNav" style="margin-top:0%"> 
@@ -601,7 +601,7 @@
                     <a href="https://www.tsinghua.edu.cn/info/1166/93890.htm" target="_blank">Jun Li</a>
                 </h3>
                 <h3 class="sectionContentSubTitle">
-                    <em> IEEE Transactions on Intelligent Vehicles, 2022</em> 
+                    <em> IEEE Transactions on Intelligent Vehicles (<b>T-IV</b>), 2022</em> 
                     <a style="color: rgb(247, 121, 175);font-weight: bold;font-style: oblique;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Review</a>
                     <em></em>
                     <a style="color: rgb(247, 121, 175);font-weight: bold;font-style: oblique;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">IF: 14</a>
@@ -659,7 +659,7 @@
                     <a href="https://scholar.google.com.hk/citations?user=0Q7pN4cAAAAJ" target="_blank">Xinyu Zhang</a> 
                 </h3>
                 <h3 class="sectionContentSubTitle">
-                    <em> Chinese Intelligent Automation Conference (CIAC) 2021 </em>
+                    <em> Chinese Intelligent Automation Conference (<b>CIAC</b>) 2021 </em>
                     <a style="color: rgb(247, 121, 175);font-weight: bold;font-style: oblique;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Best Student Paper</a>
                 </h3>
             </section>
@@ -711,7 +711,7 @@
                     <a href="https://scholar.google.com.hk/citations?user=W7ePGWYAAAAJ" target="_blank">John Oyekan</a> 
                 </h3>
                 <h3 class="sectionContentSubTitle">
-                    <em>Swarm and Evolutionary Computation, 2021 </em>
+                    <em>Swarm and Evolutionary Computation (<b>SWEVO</b>), 2021 </em>
                     <a style="color: rgb(247, 121, 175);font-weight: bold;font-style: oblique;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">IF: 8.2</a>
                 </h3>
             </section>
@@ -1045,6 +1045,12 @@
                 <p style="font-weight: bold;font-style: italic;">2020~2022,&emsp;</p>
                 <h3 class="sectionContentSubTitle">
                     <a style="font-weight: bold;">Research assistant</a> @Institute for New Technology Concept Vehicles,<a style="font-weight: bold;color: rgb(113, 112, 114);"> THU</a>, Beijing, China
+                </h3>
+            </group>
+            <group>
+                <p style="font-weight: bold;font-style: italic;">2023~now,&emsp;</p>
+                <h3 class="sectionContentSubTitle">
+                    <a style="font-weight: bold;">Principal Founder</a> <a>@超微智导技术</a></a>, China
                 </h3>
             </group>
         </div>
