--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="dropdown"><span></span><a href="https://arxiv.org/pdf/2407.06499" target="_blank">Paper</a></div>
+                <div class="dropdown"><span></span><a href="publications/2024_CoRL_Learning a Distributed Hierarchical Locomotion Controller for Embodied Cooperation.pdf" target="_blank">Paper</a></div>
                 <div class="dropdown"><span></span><a href="" target="_blank">Code</a></div>
                 <div class="dropdown"><span></span><a href="https://d-hrl.github.io/" target="_blank">Video</a></div>
             </aside>
@@ -238,7 +238,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="dropdown"><span></span><a href="http://arxiv.org/abs/2405.18300" target="_blank">Paper</a></div>
+                <div class="dropdown"><span></span><a href="publications/2024_IJCAI_CompetEvo.pdf" target="_blank">Paper</a></div>
                 <div class="dropdown"><span></span><a href="https://github.com/KJaebye/competevo" target="_blank">Code</a></div>
                 <div class="dropdown"><span></span><a href="https://competevo.github.io/" target="_blank">Video</a></div>
             </aside>
@@ -303,7 +303,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="dropdown"><span></span><a href="http://arxiv.org/abs/2403.10487" target="_blank">Paper</a></div>
+                <div class="dropdown"><span></span><a href="publications/2024_ICRA_Stimulate the potential of robots via competition.pdf" target="_blank">Paper</a></div>
                 <div class="dropdown"><span></span><a href="https://github.com/KJaebye/Multiagent-Race" target="_blank">Code</a></div>
                 <div class="dropdown"><span></span><a href="https://youtu.be/If7brGEzYNs" target="_blank">Video</a></div>
             </aside>
