--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </script>
         </div>
         <section class="section2Content">
-            <h2 class="sectionContentTitle"> emNavi (Embodied Navigation) </h2>
+            <h2 class="sectionContentTitle"> <a style="color:crimson;font-size: 20px;"><em>emNavi</em></a> (Embodied Navigation) </h2>
                 <h3 class="sectionContentSubTitle"> 
                     <b>Work with</b> 
                     <a style="color: #999;">Colleagues </a><a style="font-style: italic;">@超微智导技术(北京)有限公司</a>
@@ -99,10 +99,10 @@
         </section>
         <aside class="externalResourcesNav" style="margin-top:0%"> 
             <div class="dropdown">
-                <span></span><a href="https://github.com/emNavi" target="_blank">Project Page</a>
+                <span></span><a href="https://emnavi.tech/" target="_blank"><b>emNavi</b></a>
             </div>
             <div class="dropdown">
-                <span></span><a href="https://x152b.readthedocs.io/en/latest/" target="_blank">X152b doc</a>
+                <span></span><a href="https://emnavi.tech/droneKit/#x152b%E5%B9%B3%E5%8F%B0" target="_blank">Robot X152b</a>
             </div>
         </aside>
     </div>
