--- a/index.html
+++ b/index.html
@@ -102,14 +102,10 @@
                 <span></span><a href="https://emnavi.tech/" target="_blank"><b>emNavi</b></a>
             </div>
             <div class="dropdown">
-<<<<<<< HEAD
-                <span></span><a href="https://emnavi.tech/droneKit/" target="_blank">X152b doc</a>
+                <span></span><a href="https://emnavi.tech/droneKit/" target="_blank">X152b</a>
             </div>
             <div class="dropdown">
                 <span></span><a href="https://emnavi.tech/AirGym/" target="_blank">Sim2Real</a>
-=======
-                <span></span><a href="https://emnavi.tech/droneKit/#x152b%E5%B9%B3%E5%8F%B0" target="_blank">Robot X152b</a>
->>>>>>> 379eb12f18427a6cab5c4b9b1a91aff85649237c
             </div>
         </aside>
     </div>
