--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <!-- Header content -->
 <header>
     <div class="profilePhoto"> 
-        <img src="profile/hky_avatar.jpg" alt="sample" width="240">
+        <!-- <img src="profile/hky_avatar.jpg" alt="sample" width="240"> -->
+        <img src="profile/hky.jpg" alt="sample" width="270">
     </div>
     <!-- Identity details -->
     <section class="profileHeader">
