--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
             </script>
         </div>
         <section class="section2Content">
-            <h2 class="sectionContentTitle"> <a style="color:crimson;font-size: 20px;"><em>emNavi</em></a> (Embodied Navigation) </h2>
+            <h2 class="sectionContentTitle"> <a style="color:rgb(230, 6, 6);font-size: 20px;"><em>emNavi</em></a> (Embodied Navigation) </h2>
                 <h3 class="sectionContentSubTitle"> 
                     <b>Work with</b> 
                     <a style="color: #999;">Colleagues </a><a style="font-style: italic;">@超微智导技术(北京)有限公司</a>
                 </h3>
-                <p style="font-size: 12px;">Brief: <b>emNavi</b> is an open-source project derived from "Embodied Navigation". 
+                <p style="font-size: 12px;"><b>emNavi</b> is an open-source project derived from "Embodied Navigation". 
                     The vision of emNavi is to re-construct and optimize the navigation-related SoTA (state of the art) 
                     algorithms and apply them on robots, especially aerial robots, to promote the implementation of Embodied AI 
                     on mobile robots. </p>
@@ -107,6 +107,46 @@
             </div>
             <div class="dropdown">
                 <span></span><a href="https://emnavi.tech/AirGym/" target="_blank">Sim2Real</a>
+            </div>
+        </aside>
+    </div>
+    <br>
+
+    <!-- AirGym-Sim  -->
+    <div onmouseout="airgym_sim_stop()" onmouseover="airgym_sim_start()">	  
+        <div class="sectionContent" style="padding:0px;vertical-align:middle">
+            <div class="one">
+                <div class="two" id="airgym-sim_image">
+                    <video  width="100%" height="100%" muted="" autoplay="" loop="">
+                        <source src="material/airgym-sim.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+                <img src="material/airgym-sim.png" width="100%">
+            </div>
+            <script type="text/javascript">
+                function airgym_sim_start() {
+                document.getElementById('airgym-sim_image').style.opacity = "1";
+                }
+
+                function airgym_sim_stop() {
+                document.getElementById('airgym-sim_image').style.opacity = "0";
+                }
+                airgym_sim_stop()
+            </script>
+        </div>
+        <section class="section2Content">
+            <h2 class="sectionContentTitle"> <a style="color:rgb(83, 193, 10);font-size: 20px;"><em>AirGym</em></a> Vectorized DRL Simulation Platform </h2>
+                <p style="font-size: 12px;"><b>AirGym</b> is an open souce Python quadrotor simulator based on IsaacGym, a part of AirGym series Sim-to-Real workding flow. It provides a high-fidelity dynamics and Deep Reinforcement Learning (DRL) framework for quadrotor robot learning research. Furthermore, we also provide toolkits for transferring policy from AirGym simulator to the real quadrotor emNavi-X152b, making Sim-to-Real possible.  </p>
+            </h2>
+
+        </section>
+        <aside class="externalResourcesNav" style="margin-top:0%"> 
+            <div class="dropdown">
+                <span></span><a href="https://github.com/emNavi/AirGym" target="_blank">Github</a>
+            </div>
+            <div class="dropdown">
+                <span></span><a href="https://emnavi.tech/AirGym/" target="_blank">Project Page</a>
             </div>
         </aside>
     </div>
