--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
             University(NWPU), China. I had several years start-up experience in aerospace and automation industrial sectors, serving as a UAV designer 
             and technical director.
             <br>
-            <br>My current research interest is in Embodied AI for virtual and real world practice. I also follow ideas on aerial robotics, 
-            CV, swarm and evolutionary computation. My technological vision is to empower tranditional sectors with artificial intelligence technology.
-            I am working to build a startup team for embodied AI, if you have any ideas, please do not hesitate to email me directly.<br></p>
+            <br>My current research interest is in Embodied AI for virtual and real world practice. I also follow ideas on aerial robotics and reconstruction.
+            I am doing a startup @emNavi Tech, focusing on the EAI enhanced navigation and related sensors. If you have any ideas, please do not hesitate to email me directly.<br></p>
     </section>
     <aside class="socialNetworkNavBar">
         <div class="socialNetworkNav"> 
@@ -86,13 +85,9 @@
             </script>
         </div>
         <section class="section2Content">
-            <h2 class="sectionContentTitle"> <a style="color:rgb(230, 6, 6);font-size: 20px;"><em>emNavi</em></a> (Embodied Navigation) </h2>
-                <h3 class="sectionContentSubTitle"> 
-                    <b>Work with</b> 
-                    <a style="color: #999;">Colleagues </a><a style="font-style: italic;">@超微智导技术(北京)有限公司</a>
-                </h3>
-                <p style="font-size: 12px;"><b>emNavi</b> is an open-source project derived from "Embodied Navigation". 
-                    The vision of emNavi is to re-construct and optimize the navigation-related SoTA (state of the art) 
+            <h2 class="sectionContentTitle"><img src="material/logo1.png" alt="emNavi" style="height: 50px; vertical-align: middle;"></h2>
+                <p style="font-size: 12px;"><b>emNavi</b> derives from "Embodied Navigation". 
+                    The vision of emNavi is to make navigation more intelligent. Besides, emNavi is an open-sourced project that re-construct and optimize the navigation-related SoTA (state of the art) 
                     algorithms and apply them on robots, especially aerial robots, to promote the implementation of Embodied AI 
                     on mobile robots. </p>
             </h2>
@@ -136,8 +131,8 @@
             </script>
         </div>
         <section class="section2Content">
-            <h2 class="sectionContentTitle"> <a style="color:rgb(83, 193, 10);font-size: 20px;"><em>AirGym</em></a> Vectorized DRL Simulation Platform </h2>
-                <p style="font-size: 12px;"><b>AirGym</b> is an open souce Python quadrotor simulator based on IsaacGym, a part of AirGym series Sim-to-Real workding flow. It provides a high-fidelity dynamics and Deep Reinforcement Learning (DRL) framework for quadrotor robot learning research. Furthermore, we also provide toolkits for transferring policy from AirGym simulator to the real quadrotor emNavi-X152b, making Sim-to-Real possible.  </p>
+            <h2 class="sectionContentTitle"> <img src="material/airgym-logo.png" alt="emNavi" style="height: 30px; vertical-align: middle;"> Quadrotor DRL Simulation Platform  </h2>
+                <p style="font-size: 12px;"><b>AirGym</b> is an open souce Python quadrotor simulator based on IsaacGym, a part of AirGym series Sim-to-Real working flow. It provides a high-fidelity dynamics and Deep Reinforcement Learning (DRL) framework for quadrotor robot learning research. Furthermore, we also provide toolkits for transferring policy from AirGym simulator to the real quadrotor emNavi-X152b, making Sim-to-Real possible.  </p>
             </h2>
 
         </section>
@@ -1171,7 +1166,7 @@
             <group>
                 <p style="font-weight: bold;font-style: italic;">2023~now,&emsp;</p>
                 <h3 class="sectionContentSubTitle">
-                    <a style="font-weight: bold;">Principal Founder</a> <a>@超微智导技术</a></a>, China
+                    <a style="font-weight: bold;">Founder</a> <a>@超微智导技术</a></a>, China
                 </h3>
             </group>
         </div>
