--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <header>
     <div class="profilePhoto"> 
         <!-- <img src="profile/hky_avatar.jpg" alt="sample" width="240"> -->
-        <img src="profile/hky.jpg" alt="sample" width="270">
+        <!-- <img src="profile/hky.jpg" alt="sample" width="270"> -->
+        <img src="profile/hky_life.jpg" alt="sample" width="270">
     </div>
     <!-- Identity details -->
     <section class="profileHeader">
