--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="socialNetworkNav"> 
             <a href="https://scholar.google.com/citations?user=df7fnwQAAAAJ" target="_blank">
-                <img src="profile/scholar.jpg"  alt="sample" width="30"></a>
+                <img src="profile/scholar.png"  alt="sample" width="30"></a>
         </div>
         <div class="socialNetworkNav">
             <a href="" target="_blank">
@@ -51,13 +51,17 @@
             <a href="https://orcid.org/0000-0002-5708-2620" target="_blank">
                 <img src="profile/orcid.png"  alt="sample" width="30"></a>
         </div>
+        <div class="socialNetworkNav">
+            <a href="https://www.xiaohongshu.com/user/profile/638ceaa1000000001f01ce42" target="_blank">
+                <img src="profile/xhs.png"  alt="sample" width="30"></a>
+        </div>
     </aside>
 </header>
 
 <section class="mainContent"> 
     <section class="section2">
         <h2 class="sectionTitle">Top Open-source Projects</h2>
-        <hr class="sectionTitleRule">
+        <!-- <hr class="sectionTitleRule"> -->
         <hr class="sectionTitleRule2">
 
     <!-- emNavi  -->
@@ -217,7 +221,7 @@
 <section class="mainContent"> 
     <section class="section2">
         <h2 class="sectionTitle">Publications</h2>
-        <hr class="sectionTitleRule">
+        <!-- <hr class="sectionTitleRule"> -->
         <hr class="sectionTitleRule2">
 
         <!-- airgym-->
@@ -917,7 +921,7 @@
     <!-- Projects -->
     <section class="section2">
         <h2 class="sectionTitle">Projects</h2>
-        <hr class="sectionTitleRule">
+        <!-- <hr class="sectionTitleRule"> -->
         <hr class="sectionTitleRule2">
 
         <!-- flyingcar  -->
