--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </div>
             <div class="book-info"> 
                 <h3 class="sectionContentTitle">
-                    <a href="https://link.springer.com/book/10.1007/978-981-96-5871-8">Embodied Multi-Agent Systems: Perception, Action, and Learning</a>
+                    <a href="https://link.springer.com/book/10.1007/978-981-96-5871-8">Embodied Multi-Agent Systems</a>
                 </h3>
                 <h3 class="sectionContentSubTitle" style="font-size: 11px;"> 
                     <a href="https://scholar.google.com.hk/citations?user=HXnkIkwAAAAJ" target="_blank">Huaping Liu</a>,
