--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h3>PhD Candidate | AI Researcher | Aerospace & Robotics Engineer</h3>
         <hr>
         <p style="line-height: 15px;font-size: 12px;margin-bottom: auto;">I am Kangyao Huang (黄康尧 in Chinese) from China, working towards AI and robotics research and application. Currently, I am pursuing a PhD degree in Computer Science at <a style="color:#6e02ba" href="https://www.tsinghua.edu.cn/">Tsinghua University(THU)</a> under the supervision of Prof. <a href="https://sites.google.com/site/thuliuhuaping">Huaping Liu</a>.
-            I also hold an MRes degree in Control & Systems Engineering from <a style="color: rgb(5, 103, 196);" href="https://www.sheffield.ac.uk/acse">ACSE</a>, <a style="color: rgb(5, 103, 196);" href="https://www.sheffield.ac.uk/">the University of Sheffield(UoS)</a>, UK., supervised by Prof. <a href="https://scholar.google.co.uk/citations?user=W7ePGWYAAAAJ&hl=en">John Oyekan</a>, and a BEng degree in Aircraft Design & Engineering from <a style="color: rgb(25, 74, 179);" href="https://www.nwpu.edu.cn/">Northwestern Polytechnical
+            Besides, I also hold an MRes degree in Control & Systems Engineering from <a style="color: rgb(5, 103, 196);" href="https://www.sheffield.ac.uk/acse">ACSE</a>, <a style="color: rgb(5, 103, 196);" href="https://www.sheffield.ac.uk/">the University of Sheffield(UoS)</a>, UK., supervised by Prof. <a href="https://scholar.google.co.uk/citations?user=W7ePGWYAAAAJ&hl=en">John Oyekan</a>, and a BEng degree in Aircraft Design & Engineering from <a style="color: rgb(25, 74, 179);" href="https://www.nwpu.edu.cn/">Northwestern Polytechnical
             University (NWPU)</a>, China. I had several years start-up experience in aerospace and robotics sectors, serving as CEO, technical director, and UAV engineer.
             <br>
             <br> I have experience in EAI, UAV, and autonomous driving. I lead the development of the first generation of Tsinghua Mengshi intelligent flying car which is <b>the world's first pure electric rotorcraft unmanned flying vehicle</b> with integrated intelligent driving function. My current research interest is in Embodied AI for virtual and real world practice. I also follow ideas on aerial robotics and reconstruction. I am doing a startup @emNavi Tech, focusing on the EAI enhanced navigation and related sensors. If you have any ideas, please do not hesitate to email me directly.<br></p>
@@ -513,7 +513,7 @@
                     <a href="https://www.tsinghua.edu.cn/info/1166/93890.htm" target="_blank">Jun Li</a>
                 </h3>
                 <h3 class="sectionContentSubTitle">
-                    <em>IEEE/ASME International Conference on Advanced Intelligent Mechatronics(<b>AIM</b>) 2023 </em>
+                    <em>IEEE/ASME International Conference on Advanced Intelligent Mechatronics (<b>AIM</b>) 2023 </em>
                 </h3>
             </section>
             <aside class="externalResourcesNav" style="margin-top:0%"> 
@@ -638,7 +638,7 @@
                     <a style="color: #999;">Honglin Sun</a>, 
                     <a style="color: #999;">Wenzhuo Liu</a>, 
                     <a href="https://scholar.google.com.hk/citations?user=HXnkIkwAAAAJ" target="_blank">Huaping Liu</a>, 
-                    <a href="https://www.tsinghua.edu.cn/info/1166/93890.htm" target="_blank">Jun Li</a>,
+                    <a href="https://www.tsinghua.edu.cn/info/1166/93890.htm" target="_blank">Jun Li</a>
                 </h3>
                 <h3 class="sectionContentSubTitle">
                     <em> International Conference on Unmanned Aircraft Systems (<b>ICUAS</b>) 2023 </em>
@@ -770,7 +770,7 @@
                     <a href="https://www.tsinghua.edu.cn/info/1166/93890.htm" target="_blank">Jun Li</a>
                 </h3>
                 <h3 class="sectionContentSubTitle">
-                    <em> IEEE Transactions on Intelligent Vehicles (<b>T-IV</b>), 2022</em> 
+                    <em> IEEE Transactions on Intelligent Vehicles (<b>T-IV</b>) 2022</em> 
                     <em></em>
                     <a style="color: rgb(247, 121, 175);font-weight: bold;font-style: oblique;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">IF: 14</a>
                 </h3>
@@ -823,7 +823,7 @@
                 <h3 class="sectionContentSubTitle"> 
                     <b>Kangyao Huang</b>, 
                     <a href="https://scholar.google.com.hk/citations?user=j63_EA0AAAAJ" target="_blank">Jingyu Chen</a>, 
-                    <a href="https://scholar.google.com.hk/citations?user=W7ePGWYAAAAJ" target="_blank">John Oyekan</a>, 
+                    <a href="https://scholar.google.com.hk/citations?user=W7ePGWYAAAAJ" target="_blank">John Oyekan</a><ion-icon name="mail-outline"></ion-icon>, 
                     <a href="https://scholar.google.com.hk/citations?user=0Q7pN4cAAAAJ" target="_blank">Xinyu Zhang</a> 
                 </h3>
                 <h3 class="sectionContentSubTitle">
@@ -876,10 +876,10 @@
                 <h3 class="sectionContentSubTitle"> 
                     <b>Kangyao Huang</b>, 
                     <a href="https://scholar.google.com.hk/citations?user=j63_EA0AAAAJ" target="_blank">Jingyu Chen</a>, 
-                    <a href="https://scholar.google.com.hk/citations?user=W7ePGWYAAAAJ" target="_blank">John Oyekan</a> 
+                    <a href="https://scholar.google.com.hk/citations?user=W7ePGWYAAAAJ" target="_blank">John Oyekan</a><ion-icon name="mail-outline"></ion-icon> 
                 </h3>
                 <h3 class="sectionContentSubTitle">
-                    <em>Swarm and Evolutionary Computation (<b>SWEVO</b>), 2021 </em>
+                    <em>Swarm and Evolutionary Computation (<b>SWEVO</b>) 2021 </em>
                     <a style="color: rgb(247, 121, 175);font-weight: bold;font-style: oblique;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">IF: 8.2</a>
                 </h3>
             </section>
@@ -1015,13 +1015,12 @@
                     <b>Director:</b>
                     <a style="color: #999;">Qifan Tan</a>, 
                     <a href="https://scholar.google.com.hk/citations?user=0Q7pN4cAAAAJ" target="_blank">Xinyu Zhang</a>, 
-                    <a href="https://www.tsinghua.edu.cn/info/1166/93890.htm" target="_blank">Jun Li</a>,
+                    <a href="https://www.tsinghua.edu.cn/info/1166/93890.htm" target="_blank">Jun Li</a>
                     <a style="font-style: italic;">@New Technology Concept Vehicles, THU</a>
                 </h3>
                 <p style="font-size: 10px;"><b>Brief:</b> Towards the Smart City-Smart Transportation-Smart Vehicles(SCSTSV), we focus on the key areas of autonomous 
                     driving technology, particularly in the design and optimization of architectures for perception, decision-making, 
-                    and control. I propose a comprehensive 
-                    architecture that integrates perception, decision-making, and control into a unified framework, further enhancing 
+                    and control. I propose a comprehensive architecture that integrates perception, decision-making, and control into a unified framework, further enhancing 
                     system performance through the integration of road testing equipment.</p>
             </section>
         </div>
